tests/paczka2/big_fuzzy/74166334.err
Error in line 6: S92 S883 29,6
Error in line 10: nXyMmy S92 71,3
Error in line 16: kBuPB S883 45,1
Error in line 20: PavS2 S381 58,5
Error in line 24: PavS2 S92 55,6
Error in line 41: S92 S381 7,7
Error in line 40: kBuPB S92 3,6
Error in line 39: qS5nvaaGnz8 S883 15,2
Error in line 51: nXyMmy S381 30,5
Error in line 53: nXyMmy S92 77,0
Error in line 52: kBuPB S883 61,2
Error in line 57: PavS2 S883 71,6
Error in line 61: kBuPB S381 14,0
Error in line 84: nXyMmy S92 24,0
Error in line 86: PavS2 S381 54,3
Error in line 89: nXyMmy S141 56,8
Error in line 94: qS5nvaaGnz8 S141 62,5
Error in line 103: CAMDg S92 -1,5
Error in line 109: qS5nvaaGnz8 S381 8,4
Error in line 96: nXyMmy S883 54,7
Error in line 99: CAMDg S92 225,9
Error in line 110: qS5nvaaGnz8 S883 38,8
Error in line 111: nXyMmy S141 74,6
Error in line 134: DVYp1 S381 48,0
Error in line 137: DVYp1 S92 51,8
Error in line 141: DVYp1 S883 35,6
Error in line 140: S92 S883 99,4
Error in line 146: qS5nvaaGnz8 S92 115,9
Error in line 150: nXyMmy S883 23,5
Error in line 148: DVYp1 S141 41,1
Error in line 149: qS5nvaaGnz8 S883 8,5
Error in line 155: qS5nvaaGnz8 S92 73,56
Error in line 165: DVYp1 S92 421,1
Error in line 166: DVYp1 S381 13,2
Error in line 154: qS5nvaaGnz8 S381 16,1
Error in line 170: qS5nvaaGnz8 S92 176,6
Error in line 171: qS5nvaaGnz8 S381 39,4
Error in line 180: DVYp1 S883 67,2
Error in line 169: nXyMmy S92 23,0
Error in line 187: nXyMmy S141 49,6
Error in line 191: kBuPB S883 50,7
Error in line 197: DVYp1 S381 65,1
Error in line 203: PavS2 S883 38,0
Error in line 217: CAMDg S381 14,7
Error in line 220: S92 S141 -5,1
Error in line 218: CAMDg S883 22,1
Error in line 225: CAMDg S92 76,1
Error in line 236: DVYp1 S141 5,7
Error in line 224: qS5nvaaGnz8 S883 153,6
